--- a/Modulo1/s1/g3/style.css
+++ b/Modulo1/s1/g3/style.css
@@ -48,13 +48,6 @@ text-align: center;
     color:#B5460F;
 }
 
-
-
-
-.ingredienti{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    }
-
+.link {
+color:#107777;
+}
